scripts/K8S/RNG-K8S-deployment .yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rng-deployment
  namespace: dockercoins
  labels:
    app: rng-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rng-app
  template:
    metadata:
      labels:
        app: rng-app
    spec:
      containers:
      - name: rng
        image: dockercoinsacr.azurecr.io/jaouadifatssane/rng:#{tags}#
        imagePullPolicy: Always
        ports:
        - containerPort: 80
