scripts/K8S/hasher-K8S-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hasher-deployment
  namespace: dockercoins
  labels:
    app: hasher-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hasher-app
  template:
    metadata:
      labels:
        app: hasher-app
    spec:
      containers:
      - name: hasher
        image: dockercoinsacr.azurecr.io/jaouadifatssane/hasher:#{tags}#
        imagePullPolicy: Always
        ports:
        - containerPort: 80
