scripts/K8S/redis-K8S-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deploy
  namespace: dockercoins
  labels:
    app: redis-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-app
  template:
    metadata:
      labels:
        app: redis-app
    spec:
      containers:
      - image: redis:alpine
        name: redis
        ports:
        - containerPort: 6379
