scripts/K8S/webui-K8S-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webui-deployment
  namespace: dockercoins
  labels:
    app: webui-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webui-app
  template:
    metadata:
      labels:
        app: webui-app
    spec:
      containers:
      - name: webui
        image: dockercoinsacr.azurecr.io/jaouadifatssane/webui:#{tags}
        imagePullPolicy: Always
        ports:
        - containerPort: 80
