scripts/K8S/worker-K8S-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
  namespace: dockercoins
  labels:
    app: worker-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker-app
  template:
    metadata:
      labels:
        app: worker-app
    spec:
      containers:
      - name: worker
        image: dockercoinsacr.azurecr.io/jaouadifatssane/worker:#{tags}#
        imagePullPolicy: Always
        ports:
        - containerPort: 80
