scripts/K8S/hacher-K8S-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hacher
  name: hacher-svc
  namespace: dockercoins
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: hacher-app
  type: ClusterIP
