scripts/K8S/redis-K8S-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis
  name: redis-svc
spec:
  ports:
  - port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app: redis
  type: ClusterIP
