scripts/K8S/webui-K8S-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: webui
  name: webui-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: webui-app
  type: NodePort
