scripts/K8S/worker-K8S-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: worker
  name: worker-svc
  namespace: dockercoins
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: worker-app
  type: ClusterIP
